--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Todo List</string>
+
+    <string name="error_save_item">Error!\nCouldn\'t save the item. Please try again.</string>
+    <string name="success_save_item">Success!\nItem saved!</string>
 </resources>
