Removing an item, Minor layout changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="no">No</string>
 
     <string name="item_remove">Are you sure you want to remove: [item_name] ?</string>
+    <string name="success_remove_item">Success!\nItem removed.</string>
 </resources>
