Added Priority Buttons and design changes to match priority

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -33,4 +33,10 @@
 
     <string name="lbl_no_uncompleted_todos">Você não possui nenhuma tarefa\nAlgo novo para adicionar?</string>
     <string name="lbl_no_completed_todos">Você não possui nenhuma tarefa concluída\nAdicione uma tarefa para começar.</string>
+
+    <string name="lbl_priority">Prioridade</string>
+    <string name="lbl_priority_low">Baixa</string>
+    <string name="lbl_priority_normal">Normal</string>
+    <string name="lbl_priority_important">Importante</string>
+    <string name="lbl_priority_critical">Crítico</string>
 </resources>
